--- a/assets/call-to-action.css
+++ b/assets/call-to-action.css
@@ -16,6 +16,10 @@
   padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
+.cta__content {
+  color: var(--color-primary);
+}
+
 .cta__text-area {
   text-align: center;
 }
@@ -37,6 +41,7 @@
   bottom: 0;
   overflow: hidden;
   z-index: -1;
+  background: var(--background-primary);
 }
 
 .cta__vision--overlay:after {
@@ -46,6 +51,8 @@
   top: 0;
   right: 0;
   bottom: 0;
+  background: linear-gradient(180deg, var(--background-primary) 11.17%, var(--background-primary-00) 41.57%),
+              linear-gradient(349deg, var(--color-primary-30) 43.3%, var(--color-primary-00) 80.3%);
 }
 
 .cta__image {
@@ -53,71 +60,6 @@
   height: 100%;
   max-width: none;
   object-fit: cover;
-}
-
-.palette-one .cta__content {
-  color: var(--color-primary-1);
-}
-
-.palette-one .cta__vision {
-  background: var(--background-primary-1);
-}
-
-.palette-one .cta__vision--overlay:after {
-  background: linear-gradient(180deg, var(--background-primary-1) 11.17%, var(--background-primary-1-00) 41.57%),
-              linear-gradient(349deg, var(--color-primary-1-30) 43.3%, var(--color-primary-1-00) 80.3%);
-}
-
-.palette-two .cta__content {
-  color: var(--color-primary-2);
-}
-
-.palette-two .cta__vision {
-  background: var(--background-primary-2);
-}
-
-.palette-two .cta__vision--overlay:after {
-  background: linear-gradient(180deg, var(--background-primary-2) 11.17%, var(--background-primary-2-00) 41.57%),
-              linear-gradient(349deg, var(--color-primary-2-30) 43.3%, var(--color-primary-2-00) 80.3%);
-}
-
-.palette-three .cta__content {
-  color: var(--color-primary-3);
-}
-
-.palette-three .cta__vision {
-  background: var(--background-primary-3);
-}
-
-.palette-three .cta__vision--overlay:after {
-  background: linear-gradient(180deg, var(--background-primary-3) 11.17%, var(--background-primary-3-00) 41.57%),
-              linear-gradient(349deg, var(--color-primary-3-30) 43.3%, var(--color-primary-3-00) 80.3%);
-}
-
-.palette-four .cta__content {
-  color: var(--color-primary-4);
-}
-
-.palette-four .cta__vision {
-  background: var(--background-primary-4);
-}
-
-.palette-four .cta__vision--overlay:after {
-  background: linear-gradient(180deg, var(--background-primary-4) 11.17%, var(--background-primary-4-00) 41.57%),
-              linear-gradient(349deg, var(--color-primary-4-30) 43.3%, var(--color-primary-4-00) 80.3%);
-}
-
-.palette-five .cta__content {
-  color: var(--color-primary-5);
-}
-
-.palette-five .cta__vision {
-  background: var(--background-primary-5);
-}
-
-.palette-five .cta__vision--overlay:after {
-  background: linear-gradient(180deg, var(--background-primary-5) 11.17%, var(--background-primary-5-00) 41.57%),
-              linear-gradient(349deg, var(--color-primary-5-30) 43.3%, var(--color-primary-5-00) 80.3%);
 }
 
 @media (min-width: 992px) {
