--- a/assets/mega-menu.css
+++ b/assets/mega-menu.css
@@ -88,6 +88,7 @@
   overflow-x: hidden;
   pointer-events: none;
   display: block !important;
+  color: var(--color-primary);
 }
 
 .menu__wrapper {
@@ -102,6 +103,7 @@
   justify-content: space-between;
   transform: translate(0, -100%);
   transition: transform var(--animation-duration) var(--transition-function-ease-out);
+  background: var(--background-primary);
 }
 
 .menu__list {
@@ -126,7 +128,7 @@
     "item-1 item-2"
     "item-3 item-3";
   overflow: hidden;
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid var(--color-border);
   position: relative;
 }
 
@@ -169,6 +171,7 @@
   width: 100%;
   transform: translate(0, -100%);
   transition: transform var(--animation-duration) var(--transition-function-ease-out);
+  background: var(--background-primary);
 }
 
 .menu__dropdown-list {
@@ -183,16 +186,22 @@
   display: grid;
   grid-template-columns: 1fr min-content;
   align-items: center;
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid var(--background-primary);
   grid-template-areas:
     "drop-1 item-2"
     "item-3 item-3";
   padding: 8px 24px;
   position: relative;
+  background: var(--color-border);
 }
 
 .menu__dropdown-item:last-child {
   border: none;
+}
+
+.menu__dropdown-item .menu__dropdown-item {
+  border-bottom-color: var(--color-border);
+  background: var(--background-primary);
 }
 
 .menu__dropdown-opener {
@@ -217,6 +226,7 @@
 
 .menu__dropdown-opener path {
   transition: all var(--animation-duration) var(--transition-function-ease-in-out);
+  stroke: var(--color-primary);
 }
 
 .menu__label,
@@ -249,8 +259,9 @@
 
 .menu__bottom {
   width: 100%;
-  border-top: 1px solid transparent;
+  border-top: 1px solid var(--color-border);
   padding: 22px 0 60px;
+  background: var(--background-primary);
 }
 
 .menu__bottom:empty {
@@ -398,166 +409,6 @@
   max-height: calc(100vh - var(--header-height, 39px) + var(--top-bar-height, 0px));
 }
 
-.palette-one .menu {
-  color: var(--color-primary-1);
-}
-
-.palette-one .menu__wrapper,
-.palette-one .menu__bottom {
-  background: var(--background-primary-1);
-  border-top-color: var(--color-border-1);
-}
-
-.palette-one .menu__item {
-  border-bottom-color: var(--color-border-1);
-}
-
-.palette-one .menu__dropdown-opener path {
-  stroke: var(--color-primary-1);
-}
-
-.palette-one .menu__dropdown-wrapper {
-  background: var(--background-primary-1);
-}
-
-.palette-one .menu__dropdown-item {
-  background: var(--color-border-1);
-  border-bottom-color: var(--background-primary-1);
-}
-
-.palette-one .menu__dropdown-item .menu__dropdown-item {
-  border-bottom-color: var(--color-border-1);
-  background: var(--background-primary-1);
-}
-
-.palette-two .menu {
-  color: var(--color-primary-2);
-}
-
-.palette-two .menu__wrapper,
-.palette-two .menu__bottom {
-  background: var(--background-primary-2);
-  border-top-color: var(--color-border-2);
-}
-
-.palette-two .menu__item {
-  border-bottom-color: var(--color-border-2);
-}
-
-.palette-two .menu__dropdown-opener path {
-  stroke: var(--color-primary-2);
-}
-
-.palette-two .menu__dropdown-wrapper {
-  background: var(--background-primary-2);
-}
-
-.palette-two .menu__dropdown-item {
-  background: var(--color-border-2);
-  border-bottom-color: var(--background-primary-2);
-}
-
-.palette-two .menu__dropdown-item .menu__dropdown-item {
-  border-bottom-color: var(--color-border-2);
-  background: var(--background-primary-2);
-}
-
-.palette-three .menu {
-  color: var(--color-primary-3);
-}
-
-.palette-three .menu__wrapper,
-.palette-three .menu__bottom {
-  background: var(--background-primary-3);
-  border-top-color: var(--color-border-3);
-}
-
-.palette-three .menu__item {
-  border-bottom-color: var(--color-border-3);
-}
-
-.palette-three .menu__dropdown-opener path {
-  stroke: var(--color-primary-3);
-}
-
-.palette-three .menu__dropdown-wrapper {
-  background: var(--background-primary-3);
-}
-
-.palette-three .menu__dropdown-item {
-  background: var(--color-border-3);
-  border-bottom-color: var(--background-primary-3);
-}
-
-.palette-three .menu__dropdown-item .menu__dropdown-item {
-  border-bottom-color: var(--color-border-3);
-  background: var(--background-primary-3);
-}
-
-.palette-four .menu {
-  color: var(--color-primary-4);
-}
-
-.palette-four .menu__wrapper,
-.palette-four .menu__bottom {
-  background: var(--background-primary-4);
-  border-top-color: var(--color-border-4);
-}
-
-.palette-four .menu__item {
-  border-bottom-color: var(--color-border-4);
-}
-
-.palette-four .menu__dropdown-opener path {
-  stroke: var(--color-primary-4);
-}
-
-.palette-four .menu__dropdown-wrapper {
-  background: var(--background-primary-4);
-}
-
-.palette-four .menu__dropdown-item {
-  background: var(--color-border-4);
-  border-bottom-color: var(--background-primary-4);
-}
-
-.palette-four .menu__dropdown-item .menu__dropdown-item {
-  border-bottom-color: var(--color-border-4);
-  background: var(--background-primary-4);
-}
-
-.palette-five .menu {
-  color: var(--color-primary-5);
-}
-
-.palette-five .menu__wrapper,
-.palette-five .menu__bottom {
-  background: var(--background-primary-5);
-  border-top-color: var(--color-border-5);
-}
-
-.palette-five .menu__item {
-  border-bottom-color: var(--color-border-5);
-}
-
-.palette-five .menu__dropdown-opener path {
-  stroke: var(--color-primary-5);
-}
-
-.palette-five .menu__dropdown-wrapper {
-  background: var(--background-primary-5);
-}
-
-.palette-five .menu__dropdown-item {
-  background: var(--color-border-5);
-  border-bottom-color: var(--background-primary-5);
-}
-
-.palette-five .menu__dropdown-item .menu__dropdown-item {
-  border-bottom-color: var(--color-border-5);
-  background: var(--background-primary-5);
-}
-
 @media (min-width: 768px) {
   .menu__opener {
     position: static;
@@ -629,6 +480,10 @@
     transition: all var(--animation-duration) var(--transition-function-ease-in-out);
   }
 
+  .menu__item:hover {
+    background: var(--color-border);
+  }
+
   .menu__item-icon {
     transform: rotate(-90deg);
   }
@@ -675,8 +530,16 @@
     margin: 0;
   }
 
+  .menu__dropdown-opener:hover path {
+    stroke: var(--color-outline-hover);
+  }
+
   .menu__dropdown-closer {
     display: inline-flex;
+  }
+
+  .menu__dropdown-closer:hover {
+    color: var(--color-outline-hover);
   }
 
   .menu__dropdown-item {
@@ -685,6 +548,11 @@
     border: none;
     border-radius: var(--border-radius-rounded);
     transition: all var(--animation-duration) var(--transition-function-ease-in-out);
+    background: var(--background-primary);
+  }
+
+  .menu__dropdown-item:hover {
+    background: var(--color-border);
   }
 
   .menu__dropdown-link {
@@ -695,6 +563,8 @@
 
   .menu__bottom {
     padding: 16px 0 60px;
+    background: none;
+    border: none;
   }
 
   .menu__bottom:empty {
@@ -715,6 +585,11 @@
     width: auto;
     padding: 0;
     border: none;
+    background: none;
+  }
+
+  .menu__login-button.button:hover {
+    color: var(--color-outline-hover);
     background: none;
   }
 
@@ -744,6 +619,7 @@
     padding: 16px 23px;
     margin: 60px 0 0;
     width: 100%;
+    background: var(--color-border);
   }
 
   .menu__social-label {
@@ -762,6 +638,8 @@
     align-items: center;
     justify-content: center;
     border-radius: var(--border-radius-circle-dynamic);
+    color: var(--color-outline);
+    background: var(--background-primary);
   }
 
   .menu__social + .menu__payments {
@@ -781,6 +659,7 @@
     padding: 16px 23px;
     margin: 60px 0 0;
     font-size: calc(var(--social-size) + 2px);
+    background: var(--color-border);
   }
 
   .menu__payments .payment {
@@ -792,6 +671,8 @@
     width: 40px;
     height: 40px;
     border-radius: var(--border-radius-circle-dynamic);
+    color: var(--color-outline);
+    background: var(--background-primary);
   }
 
   .menu__payments .payment svg {
@@ -803,220 +684,5 @@
   [id^="dropdown-menu-trigger"]:checked ~ .menu__dropdown,
   [id*="dropdown-menu-trigger"]:checked ~ .menu__dropdown {
     max-height: var(--body-height, 1000px);
-  }
-
-  .palette-one .menu__item:hover {
-    background: var(--color-border-1);
-  }
-
-  .palette-one .menu__dropdown-item {
-    background: var(--background-primary-1);
-    border: none;
-  }
-
-  .palette-one .menu__dropdown-item:hover {
-    background: var(--color-border-1);
-  }
-
-  .palette-one .menu__dropdown-opener:hover path {
-    stroke: var(--color-outline-1-hover);
-  }
-
-  .palette-one .menu__dropdown-closer:hover {
-    color: var(--color-outline-1-hover);
-  }
-
-  .palette-one .menu__bottom {
-    background: none;
-    border: none;
-  }
-
-  .palette-one .menu__login-button.button:hover {
-    color: var(--color-outline-1-hover);
-    background: none;
-  }
-
-  .palette-one .menu__payments,
-  .palette-one .menu__social {
-    background: var(--color-border-1);
-  }
-
-  .palette-one .menu__payments .payment span,
-  .palette-one .menu__payments .payment i,
-  .palette-one .menu__social .social-networks__link {
-    color: var(--color-outline-1);
-    background: var(--background-primary-1);
-  }
-
-  .palette-two .menu__item:hover {
-    background: var(--color-border-2);
-  }
-
-  .palette-two .menu__dropdown-item {
-    background: var(--background-primary-2);
-    border: none;
-  }
-
-  .palette-two .menu__dropdown-item:hover {
-    background: var(--color-border-2);
-  }
-
-  .palette-two .menu__dropdown-opener:hover path {
-    stroke: var(--color-outline-2-hover);
-  }
-
-  .palette-two .menu__dropdown-closer:hover {
-    color: var(--color-outline-2-hover);
-  }
-
-  .palette-two .menu__bottom {
-    background: none;
-    border: none;
-  }
-
-  .palette-two .menu__login-button.button:hover {
-    color: var(--color-outline-2-hover);
-    background: none;
-  }
-
-  .palette-two .menu__payments,
-  .palette-two .menu__social {
-    background: var(--color-border-2);
-  }
-
-  .palette-two .menu__payments .payment span,
-  .palette-two .menu__payments .payment i,
-  .palette-two .menu__social .social-networks__link {
-    color: var(--color-outline-2);
-    background: var(--background-primary-2);
-  }
-
-  .palette-three .menu__item:hover {
-    background: var(--color-border-3);
-  }
-
-  .palette-three .menu__dropdown-item {
-    background: var(--background-primary-3);
-    border: none;
-  }
-
-  .palette-three .menu__dropdown-item:hover {
-    background: var(--color-border-3);
-  }
-
-  .palette-three .menu__dropdown-opener:hover path {
-    stroke: var(--color-outline-3-hover);
-  }
-
-  .palette-three .menu__dropdown-closer:hover {
-    color: var(--color-outline-3-hover);
-  }
-
-  .palette-three .menu__bottom {
-    background: none;
-    border: none;
-  }
-
-  .palette-three .menu__login-button.button:hover {
-    color: var(--color-outline-3-hover);
-    background: none;
-  }
-
-  .palette-three .menu__payments,
-  .palette-three .menu__social {
-    background: var(--color-border-3);
-  }
-
-  .palette-three .menu__payments .payment span,
-  .palette-three .menu__payments .payment i,
-  .palette-three .menu__social .social-networks__link {
-    color: var(--color-outline-3);
-    background: var(--background-primary-3);
-  }
-
-  .palette-four .menu__item:hover {
-    background: var(--color-border-4);
-  }
-
-  .palette-four .menu__dropdown-item {
-    background: var(--background-primary-4);
-    border: none;
-  }
-
-  .palette-four .menu__dropdown-item:hover {
-    background: var(--color-border-4);
-  }
-
-  .palette-four .menu__dropdown-opener:hover path {
-    stroke: var(--color-outline-4-hover);
-  }
-
-  .palette-four .menu__dropdown-closer:hover {
-    color: var(--color-outline-4-hover);
-  }
-
-  .palette-four .menu__bottom {
-    background: none;
-    border: none;
-  }
-
-  .palette-four .menu__login-button.button:hover {
-    color: var(--color-outline-4-hover);
-    background: none;
-  }
-
-  .palette-four .menu__payments,
-  .palette-four .menu__social {
-    background: var(--color-border-4);
-  }
-
-  .palette-four .menu__payments .payment span,
-  .palette-four .menu__payments .payment i,
-  .palette-four .menu__social .social-networks__link {
-    color: var(--color-outline-4);
-    background: var(--background-primary-4);
-  }
-
-  .palette-five .menu__item:hover {
-    background: var(--color-border-5);
-  }
-
-  .palette-five .menu__dropdown-item {
-    background: var(--background-primary-5);
-    border: none;
-  }
-
-  .palette-five .menu__dropdown-item:hover {
-    background: var(--color-border-5);
-  }
-
-  .palette-five .menu__dropdown-opener:hover path {
-    stroke: var(--color-outline-5-hover);
-  }
-
-  .palette-five .menu__dropdown-closer:hover {
-    color: var(--color-outline-5-hover);
-  }
-
-  .palette-five .menu__bottom {
-    background: none;
-    border: none;
-  }
-
-  .palette-five .menu__login-button.button:hover {
-    color: var(--color-outline-5-hover);
-    background: none;
-  }
-
-  .palette-five .menu__payments,
-  .palette-five .menu__social {
-    background: var(--color-border-5);
-  }
-
-  .palette-five .menu__payments .payment span,
-  .palette-five .menu__payments .payment i,
-  .palette-five .menu__social .social-networks__link {
-    color: var(--color-outline-5);
-    background: var(--background-primary-5);
   }
 }
