--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -16,11 +16,8 @@
 {% endcomment %}
 
 {% style %}
-  .palette-one .fa, .palette-one .far {
-    color: var(--color-primary-1);
-  }
-  .palette-two .fa, .palette-two .far {
-    color: var(--color-primary-2);
+  .fa, .far {
+    color: var(--color-primary);
   }
 {% endstyle %}
 
