--- a/snippets/payments.liquid
+++ b/snippets/payments.liquid
@@ -40,24 +40,8 @@
     fill: currentColor !important;
   }
 
-  .palette-one .payment span[title="Giropay"] .st1 {
-    fill: var(--background-primary-1) !important;
-  }
-
-  .palette-two .payment span[title="Giropay"] .st1 {
-    fill: var(--background-primary-2) !important;
-  }
-
-  .palette-three .payment span[title="Giropay"] .st1 {
-    fill: var(--background-primary-3) !important;
-  }
-
-  .palette-four .payment span[title="Giropay"] .st1 {
-    fill: var(--background-primary-4) !important;
-  }
-
-  .palette-five .payment span[title="Giropay"] .st1 {
-    fill: var(--background-primary-5) !important;
+  .payment span[title="Giropay"] .st1 {
+    fill: var(--background-primary) !important;
   }
 {% endstyle %}
 
