--- a/snippets/socials.liquid
+++ b/snippets/socials.liquid
@@ -20,24 +20,8 @@
     margin: 0 var(--social-spacing) var(--social-spacing);
   }
 
-  .palette-one .social-networks__link:hover {
-    color: var(--color-outline-1-hover);
-  }
-
-  .palette-two .social-networks__link:hover {
-    color: var(--color-outline-2-hover);
-  }
-
-  .palette-three .social-networks__link:hover {
-    color: var(--color-outline-3-hover);
-  }
-
-  .palette-four .social-networks__link:hover {
-    color: var(--color-outline-4-hover);
-  }
-
-  .palette-five .social-networks__link:hover {
-    color: var(--color-outline-5-hover);
+  .social-networks__link:hover {
+    color: var(--color-outline-hover);
   }
 
   @media (min-width: 992px) {
