--- a/assets/header.css
+++ b/assets/header.css
@@ -33,6 +33,7 @@
   right: 0;
   height: var(--body-height, 100vh);
   z-index: -2;
+  background: var(--color-primary-67);
 }
 
 .header__content--padding-top {
@@ -112,7 +113,7 @@
   width: 42px;
   margin: 0;
   padding: 8px;
-  border: 1px solid transparent;
+  border: 1px solid var(--background-accent);
   border-radius: var(--border-radius-circle);
 }
 
@@ -128,7 +129,20 @@
 }
 
 .header__search-opener g {
+  stroke: var(--background-primary);
   transition: all var(--animation-duration) var(--transition-function-ease-out);
+}
+
+.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .header__search-opener g,
+.header__inner:has(#search-opener:checked) .header__search-opener g,
+.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
+  stroke: var(--color-primary);
+}
+
+.header__search-opener:hover g,
+.page-scrolled .header-transparent .header__search-opener:hover g {
+  stroke: var(--color-outline-hover);
 }
 
 .header__search-wrapper {
@@ -152,6 +166,7 @@
 	padding: calc(18px + var(--header-height, 39px)) 75px 18px 18px;
   transform: translate(0, -100%);
   transition: transform var(--animation-duration) var(--transition-function-ease-out);
+  background: var(--background-primary);
 }
 
 .header-transparent .header__search-inner {
@@ -190,7 +205,7 @@
   display: flex;
   align-items: center;
   background: none;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius-circle);
   cursor: pointer;
   margin: 0 0 0 16px;
@@ -206,6 +221,12 @@
   width: 18px;
   transform: translate(-50%, -50%) rotate(45deg);
   transition: background var(--animation-duration) var(--transition-function-ease-out);
+  background: var(--color-primary);
+}
+
+.header__search-reset:hover:after,
+.header__search-reset:hover:before {
+  background: var(--color-outline-hover);
 }
 
 .header__search-reset:before {
@@ -231,9 +252,19 @@
   padding: 18px 18px 18px 67px;
   font-size: 16px;
   line-height: var(--line-height-sm);
-  border: 1px solid transparent;
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   background: transparent;
+  color: var(--color-primary);
+}
+
+.header__search-input::placeholder {
+  color: var(--color-placeholder);
+}
+
+.header__search-input:-webkit-autofill,
+.header__search-input:autofill {
+  box-shadow: inset 0 0 0 150px var(--background-primary) !important;
 }
 
 .header__search-input:focus {
@@ -254,9 +285,17 @@
   height: 20px;
 }
 
+.header__search-icon g {
+  stroke: var(--color-primary);
+}
+
 .header__search #search-opener:checked ~ .header__search-wrapper {
   pointer-events: all;
   max-height: var(--body-height);
+}
+
+.header__search #search-opener:checked ~ .header__search-opener g {
+  stroke: var(--color-outline);
 }
 
 .header__search #search-opener:checked ~ .header__search-wrapper .header__search-inner {
@@ -278,8 +317,16 @@
   justify-content: center;
   align-items: center;
   padding: 8px;
-  border: 1px solid transparent;
+  border: 1px solid var(--background-accent);
   border-radius: var(--border-radius-circle);
+}
+
+.header__cart .fa-spinner-third {
+  color: var(--background-primary);
+}
+
+.header__inner-background .header__cart .fa-spinner-third {
+  color: var(--color-primary);
 }
 
 .loaded .header__search-inner {
@@ -314,420 +361,13 @@ body:has(#mobile-menu-opener:checked) .header-transparent .header__logo-inner:no
   padding-top: calc(18px + var(--header-height, 39px) - var(--preview-height, 72px) - var(--top-bar-height, 0px));
 }
 
-.page-scrolled .header-transparent .palette-one.header__inner .header__content,
-.palette-one.header__inner-background .header__content,
-.palette-one.header__inner:has(#search-opener:checked) .header__content,
-.palette-one.header__inner:has(#mobile-menu-opener:checked) .header__content {
-  color: var(--color-primary-1);
-  background: var(--background-primary-1);
-  border-bottom: 1px solid var(--color-border-1);
-}
-
-.palette-one.header__inner:has(#search-opener:checked):after,
-.palette-one.header__inner:has(#mobile-menu-opener:checked):after {
-  background: var(--color-primary-1-67);
-}
-
-.palette-one .header__search {
-  border-color: var(--background-accent-1);
-}
-
-.palette-one .header__search-inner {
-  background: var(--background-primary-1);
-}
-
-.palette-one .header__search-reset {
-  border-color: var(--color-border-1);
-}
-
-.palette-one .header__search-reset:after,
-.palette-one .header__search-reset:before {
-  background: var(--color-primary-1);
-}
-
-.palette-one .header__search-reset:hover:after,
-.palette-one .header__search-reset:hover:before {
-  background: var(--color-outline-1-hover);
-}
-
-.palette-one .header__search-input {
-  color: var(--color-primary-1);
-  border-color: var(--color-border-1);
-}
-
-.palette-one .header__search-input::placeholder {
-  color: var(--color-placeholder-1);
-}
-
-.palette-one .header__search-input:-webkit-autofill,
-.palette-one .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-1) !important;
-}
-
-.palette-one .header__search-opener g {
-  stroke: var(--background-primary-1);
-}
-
-.palette-one .header__search-icon g,
-.palette-one.header__inner-background .header__search-opener g,
-.page-scrolled .header-transparent .palette-one .header__search-opener g,
-.palette-one.header__inner:has(#search-opener:checked) .header__search-opener g,
-.palette-one.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
-  stroke: var(--color-primary-1);
-}
-
-.palette-one .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline-1);
-}
-
-.palette-one .header__search-opener:hover g,
-.page-scrolled .header-transparent .palette-one .header__search-opener:hover g {
-  stroke: var(--color-outline-1-hover);
-}
-
-.palette-one .header__cart {
-  border-color: var(--background-accent-1);
-}
-
-.palette-one .header__cart .fa-spinner-third {
-  color: var(--background-primary-1);
-}
-
-.palette-one.header__inner-background .header__cart .fa-spinner-third {
-  color: var(--color-primary-1);
-}
-
-.page-scrolled .header-transparent .palette-two.header__inner .header__content,
-.palette-two.header__inner-background .header__content,
-.palette-two.header__inner:has(#search-opener:checked) .header__content,
-.palette-two.header__inner:has(#mobile-menu-opener:checked) .header__content {
-  color: var(--color-primary-2);
-  background: var(--background-primary-2);
-  border-bottom: 1px solid var(--color-border-2);
-}
-
-.palette-two.header__inner:has(#search-opener:checked):after,
-.palette-two.header__inner:has(#mobile-menu-opener:checked):after {
-  background: var(--color-primary-2-67);
-}
-
-.palette-two .header__search {
-  border-color: var(--background-accent-2);
-}
-
-.palette-two .header__search-inner {
-  background: var(--background-primary-2);
-}
-
-.palette-two .header__search-reset {
-  border-color: var(--color-border-2);
-}
-
-.palette-two .header__search-reset:after,
-.palette-two .header__search-reset:before {
-  background: var(--color-primary-2);
-}
-
-.palette-two .header__search-reset:hover:after,
-.palette-two .header__search-reset:hover:before {
-  background: var(--color-outline-2-hover);
-}
-
-.palette-two .header__search-input {
-  color: var(--color-primary-2);
-  border-color: var(--color-border-2);
-}
-
-.palette-two .header__search-input::placeholder {
-  color: var(--color-placeholder-2);
-}
-
-.palette-two .header__search-input:-webkit-autofill,
-.palette-two .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-2) !important;
-}
-
-.palette-two .header__search-opener g {
-  stroke: var(--background-primary-2);
-}
-
-.palette-two .header__search-icon g,
-.palette-two.header__inner-background .header__search-opener g,
-.page-scrolled .header-transparent .palette-two .header__search-opener g,
-.palette-two.header__inner:has(#search-opener:checked) .header__search-opener g,
-.palette-two.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
-  stroke: var(--color-primary-2)
-}
-
-.palette-two .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline-2);
-}
-
-.palette-two .header__search-opener:hover g,
-.page-scrolled .header-transparent .palette-two .header__search-opener:hover g {
-  stroke: var(--color-outline-2-hover);
-}
-
-.palette-two .header__cart {
-  border-color: var(--background-accent-2);
-}
-
-.palette-two .header__cart .fa-spinner-third {
-  color: var(--background-primary-2);
-}
-
-.palette-two.header__inner-background .header__cart .fa-spinner-third {
-  color: var(--color-primary-2);
-}
-
-.page-scrolled .header-transparent .palette-three.header__inner .header__content,
-.palette-three.header__inner-background .header__content,
-.palette-three.header__inner:has(#search-opener:checked) .header__content,
-.palette-three.header__inner:has(#mobile-menu-opener:checked) .header__content {
-  color: var(--color-primary-3);
-  background: var(--background-primary-3);
-  border-bottom: 1px solid var(--color-border-3);
-}
-
-.palette-three.header__inner:has(#search-opener:checked):after,
-.palette-three.header__inner:has(#mobile-menu-opener:checked):after {
-  background: var(--color-primary-3-67);
-}
-
-.palette-three .header__search {
-  border-color: var(--background-accent-3);
-}
-
-.palette-three .header__search-inner {
-  background: var(--background-primary-3);
-}
-
-.palette-three .header__search-reset {
-  border-color: var(--color-border-3);
-}
-
-.palette-three .header__search-reset:after,
-.palette-three .header__search-reset:before {
-  background: var(--color-primary-3);
-}
-
-.palette-three .header__search-reset:hover:after,
-.palette-three .header__search-reset:hover:before {
-  background: var(--color-outline-3-hover);
-}
-
-.palette-three .header__search-input {
-  color: var(--color-primary-3);
-  border-color: var(--color-border-3);
-}
-
-.palette-three .header__search-input::placeholder {
-  color: var(--color-placeholder-3);
-}
-
-.palette-three .header__search-input:-webkit-autofill,
-.palette-three .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-3) !important;
-}
-
-.palette-three .header__search-opener g {
-  stroke: var(--background-primary-3);
-}
-
-.palette-three .header__search-icon g,
-.palette-three.header__inner-background .header__search-opener g,
-.page-scrolled .header-transparent .palette-three .header__search-opener g,
-.palette-three.header__inner:has(#search-opener:checked) .header__search-opener g,
-.palette-three.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
-  stroke: var(--color-primary-3)
-}
-
-.palette-three .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline-3);
-}
-
-.palette-three .header__search-opener:hover g,
-.page-scrolled .header-transparent .palette-three .header__search-opener:hover g {
-  stroke: var(--color-outline-3-hover);
-}
-
-.palette-three .header__cart {
-  border-color: var(--background-accent-3);
-}
-
-.palette-three .header__cart .fa-spinner-third {
-  color: var(--background-primary-3);
-}
-
-.palette-three.header__inner-background .header__cart .fa-spinner-third {
-  color: var(--color-primary-3);
-}
-
-.page-scrolled .header-transparent .palette-four.header__inner .header__content,
-.palette-four.header__inner-background .header__content,
-.palette-four.header__inner:has(#search-opener:checked) .header__content,
-.palette-four.header__inner:has(#mobile-menu-opener:checked) .header__content {
-  color: var(--color-primary-4);
-  background: var(--background-primary-4);
-  border-bottom: 1px solid var(--color-border-4);
-}
-
-.palette-four.header__inner:has(#search-opener:checked):after,
-.palette-four.header__inner:has(#mobile-menu-opener:checked):after {
-  background: var(--color-primary-4-67);
-}
-
-.palette-four .header__search {
-  border-color: var(--background-accent-4);
-}
-
-.palette-four .header__search-inner {
-  background: var(--background-primary-4);
-}
-
-.palette-four .header__search-reset {
-  border-color: var(--color-border-4);
-}
-
-.palette-four .header__search-reset:after,
-.palette-four .header__search-reset:before {
-  background: var(--color-primary-4);
-}
-
-.palette-four .header__search-reset:hover:after,
-.palette-four .header__search-reset:hover:before {
-  background: var(--color-outline-4-hover);
-}
-
-.palette-four .header__search-input {
-  color: var(--color-primary-4);
-  border-color: var(--color-border-4);
-}
-
-.palette-four .header__search-input::placeholder {
-  color: var(--color-placeholder-4);
-}
-
-.palette-four .header__search-input:-webkit-autofill,
-.palette-four .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-4) !important;
-}
-
-.palette-four .header__search-opener g {
-  stroke: var(--background-primary-4);
-}
-
-.palette-four .header__search-icon g,
-.palette-four.header__inner-background .header__search-opener g,
-.page-scrolled .header-transparent .palette-four .header__search-opener g,
-.palette-four.header__inner:has(#search-opener:checked) .header__search-opener g,
-.palette-four.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
-  stroke: var(--color-primary-4)
-}
-
-.palette-four .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline-4);
-}
-
-.palette-four .header__search-opener:hover g,
-.page-scrolled .header-transparent .palette-four .header__search-opener:hover g {
-  stroke: var(--color-outline-4-hover);
-}
-
-.palette-four .header__cart {
-  border-color: var(--background-accent-4);
-}
-
-.palette-four .header__cart .fa-spinner-third {
-  color: var(--background-primary-4);
-}
-
-.palette-four.header__inner-background .header__cart .fa-spinner-third {
-  color: var(--color-primary-4);
-}
-
-.page-scrolled .header-transparent .palette-five.header__inner .header__content,
-.palette-five.header__inner-background .header__content,
-.palette-five.header__inner:has(#search-opener:checked) .header__content,
-.palette-five.header__inner:has(#mobile-menu-opener:checked) .header__content {
-  color: var(--color-primary-5);
-  background: var(--background-primary-5);
-  border-bottom: 1px solid var(--color-border-5);
-}
-
-.palette-five.header__inner:has(#search-opener:checked):after,
-.palette-five.header__inner:has(#mobile-menu-opener:checked):after {
-  background: var(--color-primary-5-67);
-}
-
-.palette-five .header__search {
-  border-color: var(--background-accent-5);
-}
-
-.palette-five .header__search-inner {
-  background: var(--background-primary-5);
-}
-
-.palette-five .header__search-reset {
-  border-color: var(--color-border-5);
-}
-
-.palette-five .header__search-reset:after,
-.palette-five .header__search-reset:before {
-  background: var(--color-primary-5);
-}
-
-.palette-five .header__search-reset:hover:after,
-.palette-five .header__search-reset:hover:before {
-  background: var(--color-outline-5-hover);
-}
-
-.palette-five .header__search-input {
-  color: var(--color-primary-5);
-  background: var(--background-primary-5);
-  border-color: var(--color-border-5);
-}
-
-.palette-five .header__search-input::placeholder {
-  color: var(--color-placeholder-5);
-}
-
-.palette-five .header__search-input:-webkit-autofill,
-.palette-five .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-5) !important;
-}
-
-.palette-five .header__search-opener g {
-  stroke: var(--background-primary-5);
-}
-
-.palette-five .header__search-icon g,
-.palette-five.header__inner-background .header__search-opener g,
-.page-scrolled .header-transparent .palette-five .header__search-opener g,
-.palette-five.header__inner:has(#search-opener:checked) .header__search-opener g,
-.palette-five.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
-  stroke: var(--color-primary-5)
-}
-
-.palette-five .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline-5);
-}
-
-.palette-five .header__search-opener:hover g,
-.page-scrolled .header-transparent .palette-five .header__search-opener:hover g {
-  stroke: var(--color-outline-5-hover);
-}
-
-.palette-five .header__cart {
-  border-color: var(--background-accent-5);
-}
-
-.palette-five .header__cart .fa-spinner-third {
-  color: var(--background-primary-5);
-}
-
-.palette-five.header__inner-background .header__cart .fa-spinner-third {
-  color: var(--color-primary-5);
+.page-scrolled .header-transparent .header__inner .header__content,
+.header__inner-background .header__content,
+.header__inner:has(#search-opener:checked) .header__content,
+.header__inner:has(#mobile-menu-opener:checked) .header__content {
+  color: var(--color-primary);
+  background: var(--background-primary);
+  border-bottom: 1px solid var(--color-border);
 }
 
 @media (min-width: 768px) {
