--- a/assets/rx.css
+++ b/assets/rx.css
@@ -148,6 +148,7 @@
   line-height: var(--line-height-lg);
   text-rendering: optimizeLegibility;
   letter-spacing: inherit;
+  color: var(--color-primary);
 }
 
 .bq-content.rx-content h1 {
@@ -173,186 +174,24 @@
 .bq-content.rx-content h5 a,
 .bq-content.rx-content h6 a {
   text-decoration: none;
+  color: var(--color-secondary);
 }
 
-.palette-one .bq-content.rx-content h1,
-.palette-one .bq-content.rx-content h2,
-.palette-one .bq-content.rx-content h3,
-.palette-one .bq-content.rx-content h4,
-.palette-one .bq-content.rx-content h5,
-.palette-one .bq-content.rx-content h6 {
-  color: var(--color-primary-1);
-}
-
-.palette-one .bq-content.rx-content a,
-.palette-one .bq-content.rx-content h1 a,
-.palette-one .bq-content.rx-content h2 a,
-.palette-one .bq-content.rx-content h3 a,
-.palette-one .bq-content.rx-content h4 a,
-.palette-one .bq-content.rx-content h5 a,
-.palette-one .bq-content.rx-content h6 a {
-  color: var(--color-secondary-1);
-}
-
-.palette-one .bq-content.rx-content a:hover,
-.palette-one .bq-content.rx-content a:focus,
-.palette-one .bq-content.rx-content h1 a:hover,
-.palette-one .bq-content.rx-content h1 a:focus,
-.palette-one .bq-content.rx-content h2 a:hover,
-.palette-one .bq-content.rx-content h2 a:focus,
-.palette-one .bq-content.rx-content h3 a:hover,
-.palette-one .bq-content.rx-content h3 a:focus,
-.palette-one .bq-content.rx-content h4 a:hover,
-.palette-one .bq-content.rx-content h4 a:focus,
-.palette-one .bq-content.rx-content h5 a:hover,
-.palette-one .bq-content.rx-content h5 a:focus,
-.palette-one .bq-content.rx-content h6 a:hover,
-.palette-one .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-1-hover);
-}
-
-.palette-two .bq-content.rx-content h1,
-.palette-two .bq-content.rx-content h2,
-.palette-two .bq-content.rx-content h3,
-.palette-two .bq-content.rx-content h4,
-.palette-two .bq-content.rx-content h5,
-.palette-two .bq-content.rx-content h6 {
-  color: var(--color-primary-2);
-}
-
-.palette-two .bq-content.rx-content a,
-.palette-two .bq-content.rx-content h1 a,
-.palette-two .bq-content.rx-content h2 a,
-.palette-two .bq-content.rx-content h3 a,
-.palette-two .bq-content.rx-content h4 a,
-.palette-two .bq-content.rx-content h5 a,
-.palette-two .bq-content.rx-content h6 a {
-  color: var(--color-secondary-2);
-}
-
-.palette-two .bq-content.rx-content a:hover,
-.palette-two .bq-content.rx-content a:focus,
-.palette-two .bq-content.rx-content h1 a:hover,
-.palette-two .bq-content.rx-content h1 a:focus,
-.palette-two .bq-content.rx-content h2 a:hover,
-.palette-two .bq-content.rx-content h2 a:focus,
-.palette-two .bq-content.rx-content h3 a:hover,
-.palette-two .bq-content.rx-content h3 a:focus,
-.palette-two .bq-content.rx-content h4 a:hover,
-.palette-two .bq-content.rx-content h4 a:focus,
-.palette-two .bq-content.rx-content h5 a:hover,
-.palette-two .bq-content.rx-content h5 a:focus,
-.palette-two .bq-content.rx-content h6 a:hover,
-.palette-two .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-2-hover);
-}
-
-.palette-three .bq-content.rx-content h1,
-.palette-three .bq-content.rx-content h2,
-.palette-three .bq-content.rx-content h3,
-.palette-three .bq-content.rx-content h4,
-.palette-three .bq-content.rx-content h5,
-.palette-three .bq-content.rx-content h6 {
-  color: var(--color-primary-3);
-}
-
-.palette-three .bq-content.rx-content a,
-.palette-three .bq-content.rx-content h1 a,
-.palette-three .bq-content.rx-content h2 a,
-.palette-three .bq-content.rx-content h3 a,
-.palette-three .bq-content.rx-content h4 a,
-.palette-three .bq-content.rx-content h5 a,
-.palette-three .bq-content.rx-content h6 a {
-  color: var(--color-secondary-3);
-}
-
-.palette-three .bq-content.rx-content a:hover,
-.palette-three .bq-content.rx-content a:focus,
-.palette-three .bq-content.rx-content h1 a:hover,
-.palette-three .bq-content.rx-content h1 a:focus,
-.palette-three .bq-content.rx-content h2 a:hover,
-.palette-three .bq-content.rx-content h2 a:focus,
-.palette-three .bq-content.rx-content h3 a:hover,
-.palette-three .bq-content.rx-content h3 a:focus,
-.palette-three .bq-content.rx-content h4 a:hover,
-.palette-three .bq-content.rx-content h4 a:focus,
-.palette-three .bq-content.rx-content h5 a:hover,
-.palette-three .bq-content.rx-content h5 a:focus,
-.palette-three .bq-content.rx-content h6 a:hover,
-.palette-three .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-3-hover);
-}
-
-.palette-four .bq-content.rx-content h1,
-.palette-four .bq-content.rx-content h2,
-.palette-four .bq-content.rx-content h3,
-.palette-four .bq-content.rx-content h4,
-.palette-four .bq-content.rx-content h5,
-.palette-four .bq-content.rx-content h6 {
-  color: var(--color-primary-4);
-}
-
-.palette-four .bq-content.rx-content a,
-.palette-four .bq-content.rx-content h1 a,
-.palette-four .bq-content.rx-content h2 a,
-.palette-four .bq-content.rx-content h3 a,
-.palette-four .bq-content.rx-content h4 a,
-.palette-four .bq-content.rx-content h5 a,
-.palette-four .bq-content.rx-content h6 a {
-  color: var(--color-secondary-4);
-}
-
-.palette-four .bq-content.rx-content a:hover,
-.palette-four .bq-content.rx-content a:focus,
-.palette-four .bq-content.rx-content h1 a:hover,
-.palette-four .bq-content.rx-content h1 a:focus,
-.palette-four .bq-content.rx-content h2 a:hover,
-.palette-four .bq-content.rx-content h2 a:focus,
-.palette-four .bq-content.rx-content h3 a:hover,
-.palette-four .bq-content.rx-content h3 a:focus,
-.palette-four .bq-content.rx-content h4 a:hover,
-.palette-four .bq-content.rx-content h4 a:focus,
-.palette-four .bq-content.rx-content h5 a:hover,
-.palette-four .bq-content.rx-content h5 a:focus,
-.palette-four .bq-content.rx-content h6 a:hover,
-.palette-four .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-4-hover);
-}
-
-.palette-five .bq-content.rx-content h1,
-.palette-five .bq-content.rx-content h2,
-.palette-five .bq-content.rx-content h3,
-.palette-five .bq-content.rx-content h4,
-.palette-five .bq-content.rx-content h5,
-.palette-five .bq-content.rx-content h6 {
-  color: var(--color-primary-5);
-}
-
-.palette-five .bq-content.rx-content a,
-.palette-five .bq-content.rx-content h1 a,
-.palette-five .bq-content.rx-content h2 a,
-.palette-five .bq-content.rx-content h3 a,
-.palette-five .bq-content.rx-content h4 a,
-.palette-five .bq-content.rx-content h5 a,
-.palette-five .bq-content.rx-content h6 a {
-  color: var(--color-secondary-5);
-}
-
-.palette-five .bq-content.rx-content a:hover,
-.palette-five .bq-content.rx-content a:focus,
-.palette-five .bq-content.rx-content h1 a:hover,
-.palette-five .bq-content.rx-content h1 a:focus,
-.palette-five .bq-content.rx-content h2 a:hover,
-.palette-five .bq-content.rx-content h2 a:focus,
-.palette-five .bq-content.rx-content h3 a:hover,
-.palette-five .bq-content.rx-content h3 a:focus,
-.palette-five .bq-content.rx-content h4 a:hover,
-.palette-five .bq-content.rx-content h4 a:focus,
-.palette-five .bq-content.rx-content h5 a:hover,
-.palette-five .bq-content.rx-content h5 a:focus,
-.palette-five .bq-content.rx-content h6 a:hover,
-.palette-five .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-5-hover);
+.bq-content.rx-content a:hover,
+.bq-content.rx-content a:focus,
+.bq-content.rx-content h1 a:hover,
+.bq-content.rx-content h1 a:focus,
+.bq-content.rx-content h2 a:hover,
+.bq-content.rx-content h2 a:focus,
+.bq-content.rx-content h3 a:hover,
+.bq-content.rx-content h3 a:focus,
+.bq-content.rx-content h4 a:hover,
+.bq-content.rx-content h4 a:focus,
+.bq-content.rx-content h5 a:hover,
+.bq-content.rx-content h5 a:focus,
+.bq-content.rx-content h6 a:hover,
+.bq-content.rx-content h6 a:focus {
+  color: var(--color-secondary-hover);
 }
 
 .bq-content.rx-content ul,
@@ -386,6 +225,7 @@
   font-size: 90%;
   line-height: var(--line-height-lg);
   padding: 1em;
+  background-color: var(--color-forth);
 }
 
 .bq-content.rx-content pre code {
@@ -395,26 +235,6 @@
   font-size: 100%;
   display: block;
   line-height: inherit;
-}
-
-.palette-one .bq-content.rx-content pre {
-  background-color: var(--color-forth-1);
-}
-
-.palette-two .bq-content.rx-content pre {
-  background-color: var(--color-forth-2);
-}
-
-.palette-three .bq-content.rx-content pre {
-  background-color: var(--color-forth-3);
-}
-
-.palette-four .bq-content.rx-content pre {
-  background-color: var(--color-forth-4);
-}
-
-.palette-five .bq-content.rx-content pre {
-  background-color: var(--color-forth-5);
 }
 
 .bq-content.rx-content blockquote {
@@ -453,31 +273,7 @@
   font-size: 95%;
   line-height: var(--line-height-lg);
   padding: 0.75em;
-}
-
-.palette-one .bq-content.rx-content td,
-.palette-one .bq-content.rx-content th {
-  border: 1px solid var(--color-border-1);
-}
-
-.palette-two .bq-content.rx-content td,
-.palette-two .bq-content.rx-content th {
-  border: 1px solid var(--color-border-2);
-}
-
-.palette-three .bq-content.rx-content td,
-.palette-three .bq-content.rx-content th {
-  border: 1px solid var(--color-border-3);
-}
-
-.palette-four .bq-content.rx-content td,
-.palette-four .bq-content.rx-content th {
-  border: 1px solid var(--color-border-4);
-}
-
-.palette-five .bq-content.rx-content td,
-.palette-five .bq-content.rx-content th {
-  border: 1px solid var(--color-border-5);
+  border: 1px solid var(--color-border);
 }
 
 .bq-content.rx-content th {
@@ -531,26 +327,7 @@
 
 .bq-content.rx-content kbd {
   padding: .2em .4em;
-}
-
-.palette-one .bq-content.rx-content kbd {
-  border: 1px solid var(--color-border-1);
-}
-
-.palette-two .bq-content.rx-content kbd {
-  border: 1px solid var(--color-border-2);
-}
-
-.palette-three .bq-content.rx-content kbd {
-  border: 1px solid var(--color-border-3);
-}
-
-.palette-four .bq-content.rx-content kbd {
-  border: 1px solid var(--color-border-4);
-}
-
-.palette-five .bq-content.rx-content kbd {
-  border: 1px solid var(--color-border-5);
+  border: 1px solid var(--color-border);
 }
 
 .bq-content.rx-content code {
@@ -571,36 +348,8 @@
   text-transform: uppercase;
   text-decoration: none;
   cursor: help;
-}
-
-.palette-one .bq-content.rx-content dfn[title],
-.palette-one .bq-content.rx-content abbr[title] {
-  border-bottom: 1px dotted var(--color-border-1);
-  border-top-color: var(--color-border-1);
-}
-
-.palette-two .bq-content.rx-content dfn[title],
-.palette-two .bq-content.rx-content abbr[title] {
-  border-bottom: 1px dotted var(--color-border-2);
-  border-top-color: var(--color-border-2);
-}
-
-.palette-three .bq-content.rx-content dfn[title],
-.palette-three .bq-content.rx-content abbr[title] {
-  border-bottom: 1px dotted var(--color-border-3);
-  border-top-color: var(--color-border-3);
-}
-
-.palette-four .bq-content.rx-content dfn[title],
-.palette-four .bq-content.rx-content abbr[title] {
-  border-bottom: 1px dotted var(--color-border-4);
-  border-top-color: var(--color-border-4);
-}
-
-.palette-five .bq-content.rx-content dfn[title],
-.palette-five .bq-content.rx-content abbr[title] {
-  border-bottom: 1px dotted var(--color-border-5);
-  border-top-color: var(--color-border-5);
+  border-bottom: 1px dotted var(--color-border);
+  border-top-color: var(--color-border);
 }
 
 .bq-content.rx-content cite {
