--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -5,7 +5,7 @@
   {{ "accordion.css" | asset_url | stylesheet_tag }}
 
   {%- assign behavior              = section.settings.behavior -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign description           = section.settings.description -%}
   {%- assign image                 = section.settings.image -%}
   {%- assign padding_top           = section.settings.padding_top -%}
@@ -68,7 +68,7 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="accordion__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} accordion__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} accordion__wrapper--padding-bottom{%- endif -%}"
+    class="accordion__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} accordion__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} accordion__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="accordion__container container">
@@ -141,32 +141,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "five"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-5"
       },
       {
         "type": "text",
