--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -1,6 +1,6 @@
 {{ "call-to-action.css" | asset_url | stylesheet_tag }}
 
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -52,7 +52,7 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="cta__wrapper palette-{{- color_palette -}}">
+<div class="cta__wrapper color-{{- color_scheme.id -}}">
   {%- if tag != blank or title != blank or button_label != blank and button_url != blank -%}
     <div
       class="cta__container container{% if padding_top != blank or padding_top_mobile != blank %} cta__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} cta__container--padding-bottom{%- endif -%}"
@@ -100,32 +100,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "three"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-3"
       },
       {
         "type": "text",
