--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -4,7 +4,7 @@
 {%- assign custom_title	          = section.settings.custom_title -%}
 {%- assign bottom_text            = section.settings.bottom_text -%}
 {%- assign bottom_menu            = section.settings.bottom_menu -%}
-{%- assign color_palette          = section.settings.color_palette -%}
+{%- assign color_scheme           = section.settings.color_scheme -%}
 {%- assign padding_top            = section.settings.padding_top -%}
 {%- assign padding_bottom         = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile     = section.settings.padding_top_mobile -%}
@@ -130,13 +130,13 @@
     <div class="footer__icons">
       {%- if facebook != blank or instagram != blank or twitter != blank or linkedin != blank or pinterest != blank or tiktok != blank or tumblr != blank or snapchat != blank or youtube != blank or vimeo != blank -%}
         <div class="footer__social">
-          {%- include "socials" -%}
+          {%- render "socials", settings: settings -%}
         </div>
       {%- endif -%}
 
       {%- if payment_methods.size > 0 -%}
         <div class="footer__payments payments">
-          {%- include "payments" -%}
+          {%- render "payments", payments: payment_methods -%}
         </div>
       {%- endif -%}
     </div>
@@ -163,7 +163,7 @@
 {%- endcapture -%}
 
 <div
-     class="footer__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} footer__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} footer__wrapper--padding-bottom{%- endif -%}"
+     class="footer__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} footer__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} footer__wrapper--padding-bottom{%- endif -%}"
      style="{{- variables | escape -}}"
 >
   <div class="footer__container container">
@@ -231,20 +231,10 @@
         "info": "Displayed when no logo is added"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "text",
