--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -8,7 +8,7 @@
 {%- assign menu                  = section.settings.menu -%}
 {%- assign menu_opener_mobile    = section.settings.menu_opener_mobile -%}
 {%- assign menu_opener_label     = section.settings.menu_opener_label -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign show_search           = section.settings.show_search -%}
 {%- assign search_placeholder    = section.settings.search_placeholder -%}
 {%- assign show_datepicker       = section.settings.show_datepicker -%}
@@ -73,14 +73,13 @@
   {%- endcase -%}
 {%- endcapture -%}
 
-{%- include 'variables-mini-cart' -%}
+{%- render 'variables-mini-cart' -%}
 {% comment %} CSS variables end {% endcomment %}
 
 {%- if show_datepicker -%}
-  {%- render 'background-accent',
-      color_palette: color_palette,
-      settings: settings
-   -%}
+  {% for scheme in settings.color_schemes -%}
+    {%- assign background_accent = scheme.settings.background_accent -%}
+  {%- endfor -%}
 {%- endif -%}
 
 {% comment %} Logo component {% endcomment %}
@@ -313,7 +312,7 @@
 {%- endcapture -%}
 
 <div
-  class="header__inner{% unless transparent_bg %} header__inner-background{% endunless %} palette-{{- color_palette -}}"
+  class="header__inner{% unless transparent_bg %} header__inner-background{% endunless %} color-{{- color_scheme.id -}}"
   style="{{- variables | escape -}}"
 >
   <div class="header__content{% if padding_top != blank or padding_top_mobile != blank %} header__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} header__content--padding-bottom{%- endif -%}">
@@ -329,9 +328,7 @@
           {%- if show_datepicker -%}
             {%- render 'date-picker',
                 key: section.key,
-                color_palette: color_palette,
-                background: background_accent,
-                settings: settings
+                background: background_accent
             -%}
           {%- endif -%}
         </div>
@@ -400,32 +397,10 @@
         "info": "Displayed when no logo is added"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "checkbox",
