--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,6 +1,6 @@
 {{ "hero.css" | asset_url | stylesheet_tag }}
 
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign height                = section.settings.height -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -144,16 +144,12 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="hero__wrapper hero__wrapper-{{- height -}}-height palette-{{- color_palette -}}" style="{{- variables | escape -}}">
+<div class="hero__wrapper hero__wrapper-{{- height -}}-height color-{{- color_scheme.id -}}" style="{{- variables | escape -}}">
   <div class="hero__container container{% if padding_top != blank or padding_top_mobile != blank %} hero__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} hero__container--padding-bottom{%- endif -%}">
     <div class="hero__text-area{% if show_overlay %} hero__text-area--color{%- endif -%}">
       <div class="hero__content">
         {%- if title != blank -%}
-          {%- if carousel -%}
-            <h2 class="hero__title bq-content rx-content">{{- title -}}</h2>
-          {%- else -%}
-            <h1 class="hero__title bq-content rx-content">{{- title -}}</h1>
-          {%- endif -%}
+          <h1 class="hero__title bq-content rx-content">{{- title -}}</h1>
         {%- endif -%}
 
         {%- if description != blank -%}
@@ -254,32 +250,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "four"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-4"
       },
       {
         "type": "contentEditor",
