--- a/sections/logos.liquid
+++ b/sections/logos.liquid
@@ -3,7 +3,7 @@
   {{ "logos.css" | asset_url | stylesheet_tag }}
 
   {%- assign title                 = section.settings.title -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -51,7 +51,7 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="logos__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} logos__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} logos__wrapper--padding-bottom{%- endif -%}"
+    class="logos__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} logos__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} logos__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="logos__container container">
@@ -107,32 +107,10 @@
         "default": "Used by the world's most average companies"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "three"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-3"
       },
       {
         "type": "header",
