--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -8,7 +8,7 @@
 
   {%- assign button_label          = section.settings.button_label -%}
   {%- assign button_url            = section.settings.button_url -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign image                 = section.settings.image -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -103,7 +103,7 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="products__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{% endif %}{% if image != blank %} products__wrapper--with-background{%- endif -%}"
+    class="products__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{% endif %}{% if image != blank %} products__wrapper--with-background{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="products__container container">
@@ -227,32 +227,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          },
-          {
-            "value": "four",
-            "label": "Color set 4"
-          },
-          {
-            "value": "five",
-            "label": "Color set 5"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "text",
