--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -7,7 +7,7 @@
   {%- assign bar_text              = section.settings.bar_text -%}
   {%- assign bar_message           = section.settings.bar_message -%}
   {%- assign bar_menu              = section.settings.bar_menu -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -54,7 +54,7 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="top-bar__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} top-bar__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} top-bar__wrapper--padding-bottom{%- endif -%}"
+    class="top-bar__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} top-bar__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} top-bar__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="top-bar__container container">
@@ -111,24 +111,10 @@
         "label": "Show top bar"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          },
-          {
-            "value": "three",
-            "label": "Color set 3"
-          }
-        ],
-        "default": "three"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-3"
       },
       {
         "type": "contentEditor",
